# digikala-customer-churn-prediction

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.jupyter  Dockerfile.jupyter.cpu  FILE_STRUCTURE.md  LICENSE  Makefile  README.md  docker-compose.cpu.yml  docker-compose.yml  env.example  pyproject.toml  requirements-cpu.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  ml-pipeline.yml
app/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  __init__.py  config.py  feature_names.txt  main.py  model.pkl  requirements.txt  scaler.pkl  schemas.py  services.py
app/models/: __init__.py  ft_transformer.py  predictor.py
data/: README.md
db/: load_data.py  schema.sql
frontend/: Dockerfile  Home.py  README.md  requirements.txt
frontend/config/: __init__.py  i18n.py
frontend/pages/: 1_👤_User_Prediction.py  2_🚨_High_Risk_Users.py  3_📊_Analytics.py  4_📄_Report.py
frontend/utils/: __init__.py  api_client.py  helpers.py
mlops/: README.md  __init__.py  compare.py  config.py  experiment.py  tracker.py  train.py  utils.py
models_v2/: README.md  ft_transformer_model.pt  scaler.pkl  xgboost_1order.pkl
notebooks/: 00_schema_design_eda.ipynb  01_business_metrics_clv_analysis.ipynb  01_comprehensive_eda.ipynb  01_eda.ipynb  01_eda_feature_engineering.ipynb  01_segment_based_churn_analysis.ipynb  02_feature_engineering.ipynb  02_model_training.ipynb  02_preprocessing_feature_engineering_final.ipynb  03_ml_modeling_experiments.ipynb  03_model_training.ipynb  04_ml_modeling_experiments.ipynb  04_neural_network_models_v2.ipynb  05_advanced_eda_deep_analysis.ipynb  05_neural_network_models_v2.ipynb  README.md
notebooks/R_and_D/: 01_eda.ipynb  01_eda_feature_engineering.ipynb  02_model_training.ipynb  03_experiment_template.ipynb  05_neural_network_models.ipynb
reports/: Gozaresh.html  Gozaresh.md  README.md  generate_advanced_plots.py  generate_plots.py  temp.py
scripts/: prepare_user_features.py  test_api.py
src/: __init__.py
src/data/: __init__.py  dataset.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  ft_transformer.py  ml_models.py  mlp.py  tabnet.py
src/training/: __init__.py  trainer.py
src/visualization/: __init__.py
tests/: README.md  README_test_api.md  __init__.py  conftest.py  test_api.py  test_config.py  test_feature_engineering.py  test_mlops.py  test_models.py  test_services.py
